--- a/style.css
+++ b/style.css
@@ -1,4 +1,8 @@
-.wp-block-wyvern-blocks-test-02 {
+.wp-block-wyvern-blocks-test-02,
+.wp-block-wyvern-blocks-test-03,
+.wp-block-wyvern-blocks-test-04,
+.wp-block-wyvern-blocks-test-05,
+.wp-block-wyvern-blocks-test-06 {
 	color: darkred;
 	background: #fcc;
 	border: 2px solid #c99;
